--- a/estilos/style.css
+++ b/estilos/style.css
@@ -446,3 +446,138 @@ footer{
     box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.54);
     font-size: 12px;
 }
+
+/*Responsivo 1200px*/
+
+@media (max-width: 1200px) and (min-width: 800px){
+    
+    header > h1{
+        font-size: 1.6em;
+
+    }
+
+    /*primeiro*/
+    
+    section#primeiro img#img1{ 
+        width: 250px;
+        height: 350px;
+        left: 40px;
+    }
+
+    section#primeiro article{
+        height: 300px;
+        width: 250px;
+        left: 292px;
+    }
+
+    section#primeiro h1, section#segundo h1{
+        margin: 15px;
+        font-size: 20px;
+    }
+
+    section#primeiro p, section#segundo p{
+        margin: 0px 20px;
+        font-size: .8em;
+    }
+
+    section#primeiro img#img2{
+        right: 5vw;
+    }
+
+    /*Segundo*/
+
+    section#segundo article{
+        height: 300px;
+        width: 250px;
+        right: 291px;
+    }
+
+    section#segundo img#img1{
+        width: 250px;
+        height: 350px;
+        right: 40px;
+    }
+
+    section#segundo img#img2{
+        left: 5vw;
+    }
+
+    section#segundo p{
+        font-size: 12px;
+    }
+
+    /*habilidades*/
+
+    section#habilidades article{
+        width: 140px;
+        height: 100%;
+    }
+
+    section#habilidades article#um{
+        left: 1vw;
+    }
+
+    section#habilidades article#dois{
+        left: 19vw;
+    }
+
+    section#habilidades article#tres{
+        right: 20vw;
+    }
+    section#habilidades article#quatro{
+        right: 2vw;
+    }
+
+    section#habilidades h1{
+        font-size: 15px;
+    }
+
+    section#habilidades p{
+        font-size: 14px;
+        line-height: 22px;
+    }
+
+    section#habilidades div#menu{
+        height: 150px;
+    }
+
+    section#habilidades div#marte{
+        height: 200px;
+        width: 200px;
+    }
+
+    /*links*/
+
+    section#sites div#jupter{
+    width: 320px;
+    height: 320px;
+    }
+
+    section#sites div#lua1{
+        left: 12%;
+        top: 20%;
+    }
+
+    section#sites div#lua2{
+        left: 12%;
+        bottom: 20%;
+    }
+
+    section#sites div#lua3{
+        top: 20%;
+        right: 12%;
+    }
+
+    section#sites div#lua4{
+        bottom: 20%;
+        right: 12%;
+    }
+
+    /*divisoria*/
+
+    section#divisoria{
+        position: relative;
+        height: 200px;
+        margin-top: 120px;
+    }
+}
